# strava-bq-sync

./: .gcloudignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
stravabqsync/: config.py  domain.py  exceptions.py  retry.py
stravabqsync/adapters/: __init__.py
stravabqsync/adapters/gcp/: __init__.py  _clients.py  _repositories.py  schemas.py
stravabqsync/adapters/strava/: __init__.py  _repositories.py
stravabqsync/application/services/: __init__.py  _sync_service.py
tests/: test_config.py  test_domain.py  test_exceptions.py  test_retry.py
tests/adapters/gcp/: test_clients.py  test_init.py  test_repositories.py
tests/adapters/strava/: test_init.py  test_repositories.py
tests/application/services/: test_init.py  test_sync_service.py
tests/fixtures/: activity_1.json  activity_2.json
tests/mocks/: bigquery_client_wrapper.py  read_activities_repo.py  read_token_repo.py  write_activities.py
