[tool.poetry]
name = "stravabqsync"
version = "0.1.0"
description = ""
authors = ["Andy Eschbacher <andyesch@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
google-cloud-bigquery = "^3.14.1"
python-dotenv = "^1.0.0"
requests = "^2.32.4"
functions-framework = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.6.0"
requests-mock = "^1.11.0"
coverage = "^7.3.4"
ruff = "^0.12.4"
mypy = "^1.17.0"
types-requests = "^2.32.4.20250611"
pytest-cov = "^6.2.1"


[tool.poetry.group.ad-hoc.dependencies]
tqdm = "^4.66.1"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black's line length
line-length = 88

# Enable common rule sets
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
]

# Ignore specific rules if needed
lint.ignore = []

# Exclude files/directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
]
